// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PetForm > renders Empty 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Name
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-1fu8n1fu8"
          name="$.name"
          required=""
          value=""
        />
      </div>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-1ssssssss"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-1ssssssss"
          >
            Alive
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-PillsInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-PillsInput-label"
        for="mantine-25rcyk5rc"
        id="mantine-25rcyk5rc-label"
      >
        Tags
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-PillsInput-wrapper"
        data-multiline="true"
        data-variant="default"
      >
        <div
          class="m_8fb7ebe7 mantine-Input-input mantine-PillsInput-input"
          data-variant="default"
        >
          <div
            class="m_1dcfd90b mantine-PillGroup-group"
          >
            <input
              aria-invalid="false"
              class="m_45c4369d mantine-PillsInputField-field"
              data-type="visible"
              id="mantine-25rcyk5rc"
              name="$.newTag"
              placeholder="Some attribute"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active _hot_c4b7be m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`PetForm > renders Errors 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-error="true"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Name
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-error="true"
        data-variant="default"
        style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2);"
      >
        <input
          aria-describedby="mantine-1fu8n1fu8-error"
          aria-invalid="true"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-error="true"
          data-variant="default"
          id="mantine-1fu8n1fu8"
          name="$.name"
          required=""
          value="Bad"
        />
      </div>
      <p
        class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
        id="mantine-1fu8n1fu8-error"
      >
        name too short
      </p>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-1ssssssss"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-1ssssssss"
          >
            Alive
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-PillsInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-PillsInput-label"
        for="mantine-25rcyk5rc"
        id="mantine-25rcyk5rc-label"
      >
        Tags
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-PillsInput-wrapper"
        data-multiline="true"
        data-variant="default"
      >
        <div
          class="m_8fb7ebe7 mantine-Input-input mantine-PillsInput-input"
          data-variant="default"
        >
          <div
            class="m_1dcfd90b mantine-PillGroup-group"
          >
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-variant="default"
              data-with-remove="true"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                ugly
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <input
              aria-invalid="false"
              class="m_45c4369d mantine-PillsInputField-field"
              data-type="visible"
              id="mantine-25rcyk5rc"
              name="$.newTag"
              placeholder="Some attribute"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active _hot_c4b7be m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`PetForm > renders Populated 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-1ssssssss"
        id="mantine-1ssssssss-label"
      >
        Name
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-1ssssssss"
          name="$.name"
          required=""
          value="Fido"
        />
      </div>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-checked="true"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            checked=""
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-25rcyk5rc"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-25rcyk5rc"
          >
            Alive
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-PillsInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-PillsInput-label"
        for="mantine-2ipx4bipx"
        id="mantine-2ipx4bipx-label"
      >
        Tags
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-PillsInput-wrapper"
        data-multiline="true"
        data-variant="default"
      >
        <div
          class="m_8fb7ebe7 mantine-Input-input mantine-PillsInput-input"
          data-variant="default"
        >
          <div
            class="m_1dcfd90b mantine-PillGroup-group"
          >
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-variant="default"
              data-with-remove="true"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                friendly
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-variant="default"
              data-with-remove="true"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                happy
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <input
              aria-invalid="false"
              class="m_45c4369d mantine-PillsInputField-field"
              data-type="visible"
              id="mantine-2ipx4bipx"
              name="$.newTag"
              placeholder="Some attribute"
              type="text"
              value="fake"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active _hot_c4b7be m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;
